# async-architecture-course

./: .dockerignore  README.md  docker-compose.local.yml
auth_service/: .env.local  Dockerfile  Makefile  pyproject.toml
auth_service/db/: 0001.initial.sql
auth_service/src/: _tokens.py  _types.py  app.py  event.py
auth_service/src/api/v1/: __init__.py  _model.py  auth_api.py  user_api.py
auth_service/src/event/: _producer.py
auth_service/src/repos/: user_repo.py
billing_service/: .env.local  Dockerfile  pyproject.toml
billing_service/db/: 0001.initial.sql
billing_service/lib/auth_client/: __init__.py  _client.py
billing_service/lib/db/: __init__.py  _migrations.py  _session.py
billing_service/src/: _types.py  app.py  consumer.py  utils.py
billing_service/src/api/v1/: __init__.py  bank_api.py
billing_service/src/repos/: payment_repo.py  task_repo.py  user_repo.py
schema_registry/: MANIFEST.in  None  README.md  generate.py  requirements.dev.txt  script.sh  setup.py
schema_registry/schema_registry/models/account/created/: v1.py
schema_registry/schema_registry/models/account/role_changed/: v1.py
schema_registry/schema_registry/models/task/assigned/: v1.py
schema_registry/schema_registry/models/task/closed/: v1.py
schema_registry/schema_registry/models/task/created/: v1.py
schema_registry/schema_registry/schemas/account/created/: v1.json
schema_registry/schema_registry/schemas/account/role_changed/: v1.json
schema_registry/schema_registry/schemas/task/assigned/: v1.json
schema_registry/schema_registry/schemas/task/closed/: v1.json
schema_registry/schema_registry/schemas/task/created/: v1.json
tracker_service/: .env.local  Dockerfile  pyproject.toml
tracker_service/db/: 0001.initial.sql
tracker_service/src/: _types.py  app.py  consumer.py  event.py
tracker_service/src/api/v1/: __init__.py  _model.py  tasks_api.py
tracker_service/src/repos/: task_repo.py  user_repo.py
